--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <div class="cartao__conteudo">
     <h3>Programação</h3>
     <div class="cartao__conteudo__pergunta">
-        O que é JavaScipt
+        <p> Oque é JavaScipt?</div>
     </div>
     <div class="cartao__conteudo__resposta">
-        O JavaScipt é uma linguagem de Programação
+        <p>O JavaScipt é uma linguagem de Programação</p>
     </div>
 </div>
             </article>
@@ -25,10 +25,10 @@
         <div class="cartao__conteudo">
                 <h3> Programação </h3>
                       <div class="cartao__conteudo__pergunta">
-                            O que é CSS?
+                            <p>O que é CSS?</div>
                         </div>                        
                        <div class="cartao__conteudo__resposta">
-                            O CSS é uma linguagem de estilização.
+                            <p>CSS é uma linguagem de estilização</p>
                          </div>
                         </div>
                             
